--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -1,13 +1,15 @@
+# PUT THIS FILE IN /etc/apache2/
+
+# Listen 80
 <VirtualHost *:80>
         ServerAdmin     sbriois@cict.fr
         ServerName      lbcmcp-orders.ups-tlse.fr
-
         LogLevel        error
         ErrorLog        ${APACHE_LOG_DIR}/lbcmcp_orders_error.log
 
-        Alias /admin_media /usr/local/lib/python2.7/dist-packages/django/contrib/admin/media
+        Alias /media_admin /usr/local/lib/python2.7/dist-packages/django/contrib/admin/media
 
-        <Location /admin_media>
+        <Location /media_admin>
                 Order allow,deny
                 Allow from all
         </Location>
@@ -25,7 +27,39 @@
                 Order deny,allow
                 Allow from all
         </Directory>
-        
+
         WSGIDaemonProcess lbcmcp_orders user=${APACHE_RUN_USER} group=${APACHE_RUN_GROUP} threads=10
         WSGIProcessGroup lbcmcp_orders
+</VirtualHost>
+
+# Listen 8080
+<VirtualHost *:8080>
+        ServerAdmin     sbriois@cict.fr
+        ServerName      lbcmcp-orders.ups-tlse.fr
+        LogLevel        error
+        ErrorLog        ${APACHE_LOG_DIR}/lbcmcp_orders_error.log
+
+        Alias /media_admin /usr/local/lib/python2.7/dist-packages/django/contrib/admin/media
+
+        <Location /media_admin>
+                Order allow,deny
+                Allow from all
+        </Location>
+
+        Alias /media/ /var/www/cbd_orders/media/
+
+        <Directory /var/www/cbd_orders/media>
+                Order deny,allow
+                Allow from all
+        </Directory>
+
+        WSGIScriptAlias / /var/www/cbd_orders/apache/django.wsgi
+        
+        <Directory /var/www/cbd_orders/apache>
+                Order deny,allow
+                Allow from all
+        </Directory>
+        
+        WSGIDaemonProcess cbd_orders user=${APACHE_RUN_USER} group=${APACHE_RUN_GROUP} threads=10
+        WSGIProcessGroup cbd_orders
 </VirtualHost>
