Adding comment field to search forms

--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -2,7 +2,7 @@
 
 # Listen 80
 <VirtualHost *:80>
-        ServerAdmin     sbriois@cict.fr
+        ServerAdmin     fabrice.escaffit@univ-tlse3.fr 
         ServerName      lbcmcp-orders.ups-tlse.fr
         LogLevel        error
         ErrorLog        ${APACHE_LOG_DIR}/lbcmcp_orders_error.log
@@ -34,10 +34,10 @@
 
 # Listen 8080
 <VirtualHost *:8080>
-        ServerAdmin     sbriois@cict.fr
+        ServerAdmin     fabrice.escaffit@univ-tlse3.fr 
         ServerName      lbcmcp-orders.ups-tlse.fr
         LogLevel        error
-        ErrorLog        ${APACHE_LOG_DIR}/lbcmcp_orders_error.log
+        ErrorLog        ${APACHE_LOG_DIR}/cbd_orders_error.log
 
         Alias /media_admin /usr/local/lib/python2.7/dist-packages/django/contrib/admin/media
 
